# rocket-mongo-api

./: .env  Cargo.toml  README.md
src/: main.rs
src/api/: mod.rs  subscription_api.rs
src/models/: mod.rs  subscription_model.rs
src/repository/: mod.rs  mongodb_repo.rs  subscription.rs  user.rs
