[package]
name = "rocket-mongo-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.3", features = ["json"]}
serde = "1.0.136"
dotenv = "0.15.0"
chrono = "0.4.24"
bson = { version = "2.6.1", features = ["chrono-0_4"]}

[dependencies.mongodb]
version = "2.5.0"
default-features = false
features = ["sync"]
